RESOLVED FIXED191716
ASSERTION FAILED: m_outOfLineJumpTargets.contains(bytecodeOffset)
https://bugs.webkit.org/show_bug.cgi?id=191716
Summary ASSERTION FAILED: m_outOfLineJumpTargets.contains(bytecodeOffset)
Tadeu Zagallo
Reported 2018-11-15 14:28:15 PST
After https://bugs.webkit.org/show_bug.cgi?id=187373, when updating jump targets during generatorification, we only stored the new jump target when it changed. However, the out-of-line jump targets are cleared at the beginning of the pass, so we need to store it unconditionally.
Attachments
Patch (5.39 KB, patch)
2018-11-15 14:33 PST, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2018-11-15 14:32:44 PST
Tadeu Zagallo
Comment 2 2018-11-15 14:33:42 PST
WebKit Commit Bot
Comment 3 2018-11-26 10:15:27 PST
Comment on attachment 354990 [details] Patch Clearing flags on attachment: 354990 Committed r238499: <https://trac.webkit.org/changeset/238499>
WebKit Commit Bot
Comment 4 2018-11-26 10:15:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.