ASSERTION FAILED: m_outOfLineJumpTargets.contains(bytecodeOffset) https://bugs.webkit.org/show_bug.cgi?id=191716 <rdar://problem/45723878>

Reviewed by Saam Barati.

JSTests:

* stress/regress-187373.js: Added.
(async.fn):

Source/JavaScriptCore:

After https://bugs.webkit.org/show_bug.cgi?id=187373, when updating
jump targets during generatorification, we only stored the new jump
target when it changed. However, the out-of-line jump targets are
cleared at the beginning of the pass, so we need to store it
unconditionally.

* bytecode/PreciseJumpTargetsInlines.h:
(JSC::extractStoredJumpTargetsForInstruction):
(JSC::updateStoredJumpTargetsForInstruction):


Canonical link: https://commits.webkit.org/206668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238499 268f45cc-cd09-0410-ab3c-d52691b4dbfc